# scalarstop

./: .gitignore  .isort.cfg  .makefile-help  .pylintrc  .readthedocs-requirements.txt  .readthedocs.yml  LICENSE  Makefile  README.rst  create_dummy_sqlite3_db.py  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml  test-mac-windows.yml  test-mac.yml  test-ubuntu.yml  test-windows.yml  test.yml
docs/: conf.py  index.rst
docs/_intersphinx-mappings/: pandas.inv  python.inv  sqlalchemy.inv
docs/_static/css/: custom.css
docs/_templates/: base.html
notebooks/: .gitignore  tutorial.ipynb
scalarstop/: __init__.py  _attr_dict.py  _constants.py  _cpu.py  _datetime.py  _filesystem.py  _keras_callbacks.py  _logging.py  _naming.py  _single_namespace.py  _tfdata.py  datablob.py  datablob_metadata.py  dataclasses.py  exceptions.py  hyperparams.py  model.py  model_template.py  pickle.py  tf_config.py  train_store.py  warnings.py
tests/: __init__.py  assertions.py  fixtures.py  test__attr_dict.py  test_datablob.py  test_dataclasses.py  test_hyperparams.py  test_model.py  test_model_custom_layers.py  test_model_template.py  test_tf_config.py  test_train_store.py  test_train_store_database_migrations.py
tests/database_fixtures/: README.md  v0.2.3.sqlite3  v1.0.0.sqlite3  v4.0.0.sqlite3
