[tool.poetry]
name = "scalarstop"
version = "0.0.0"
description = "A framework for managing machine learning experiments."
authors = ["Neocrym Records Inc <engineering@neocrym.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://www.scalarstop.com"
repository = "https://github.com/scalarstop/scalarstop"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "*"
numpy = "*"
cloudpickle = "^1.6.0"
SQLAlchemy = "^1.4.5"
psycopg2-binary = "^2.8.6"

# These are optional dependencies installed
# with pip extras. Seee the `tool.poetry.extras` section for more.
tensorflow = { version = ">=2.3.0", optional = true }
tensorflow-gpu = { version = ">=2.3.0", optional = true }

[tool.poetry.dev-dependencies]
# dev-dependencies does not include dependencies
# for generating docs. they are stored in .readthedocs-requirements.txt
pytest = "^5.2"
black = "^20.8b1"
isort = "^5.8.0"
pylint = "^2.7.4"
mypy = "^0.812"
coverage = "^5.5"
jupyter = "^1.0.0"

# We use pip "extras" to enforce a dependency on either
# the `tensorflow` or `tensorflow-gpu` package.
[tool.poetry.extras]
tensorflow = ["tensorflow"]
tensorflow-gpu = ["tensorflow-gpu"]

[tool.black]
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.svn
    | \.mypy_cache
    | \.nox
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | migrations
    | dist
    | bin
  )/
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

